Ignore supporting docs

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ bio site Patterns.docx
 *.docx
 
 *.tmp
+
+martintroye\.github\.io-Accessability Audit 20190116T213329\.json
+
+bio site audit results 20190116\.JPG
